# Jenkins-Investigator-MCP-Server

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  server.py
docs/: architecture.md  tool-flow.md
tests/: test_jenkins_api.py  test_jenkins_api_extended.py  test_junit_parser.py  test_log_parser.py  test_tools_and_bundles.py
utils/: jenkins_api.py  junit_parser.py  log_parser.py  scm.py
