[project]
name = "jenkins-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for debugging failing Jenkins CI jobs"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0",
    "requests>=2.31",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
jenkins-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
